# airspacebookingutils

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
include/: CMakeLists.txt
include/airspacebookingutils/: library.h
include/airspacebookingutils/util/: 4DUtils.h  Bresenham3D.h  DefaultGEOSMessageHandlers.h  GeometryOperations.h  GeometryProjectionUtils.h  VectorOperations.h
python/: Bindings.cpp  CMakeLists.txt
python/pyairspacebooking/: __init__.py
src/: CMakeLists.txt  library.cpp
test/: CMakeLists.txt  ConflictTests.cpp  H3IndexTests.cpp  ProjectionTests.cpp  test_bindings.py
